custom list widgets
added custom list elements;
finished PlayerWidget::getPlaylist();

--- a/loginwidget.ui
+++ b/loginwidget.ui
@@ -11,11 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>LoginWidget</string>
+   <string>VK Desktop Music Player</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QWebView" name="webView">
+    <widget class="QWebView" name="loginView">
      <property name="url">
       <url>
        <string>about:blank</string>
@@ -39,9 +39,9 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="loginButton">
        <property name="text">
-        <string>PushButton</string>
+        <string>Log In</string>
        </property>
       </widget>
      </item>
