--- a/customlistwidgetitemview.ui
+++ b/customlistwidgetitemview.ui
@@ -42,7 +42,7 @@
        <item>
         <widget class="QPushButton" name="playButton">
          <property name="text">
-          <string>Play</string>
+          <string>&gt;</string>
          </property>
         </widget>
        </item>
@@ -52,19 +52,6 @@
           <number>24</number>
          </property>
         </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>29</width>
-           <height>48</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </item>
