--- a/customlistwidgetitemview.ui
+++ b/customlistwidgetitemview.ui
@@ -10,12 +10,27 @@
     <height>229</height>
    </rect>
   </property>
+  <property name="contextMenuPolicy">
+   <enum>Qt::CustomContextMenu</enum>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
-    <widget class="QGraphicsView" name="coverView"/>
+    <widget class="QPushButton" name="playButton">
+     <property name="font">
+      <font>
+       <pointsize>25</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+       <stylestrategy>PreferDefault</stylestrategy>
+      </font>
+     </property>
+     <property name="text">
+      <string>▶</string>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -23,6 +38,11 @@
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QLabel" name="titleLabel">
+         <property name="font">
+          <font>
+           <pointsize>16</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Title</string>
          </property>
@@ -30,6 +50,11 @@
        </item>
        <item>
         <widget class="QLabel" name="artistLabel">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Artist&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
@@ -39,13 +64,6 @@
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QPushButton" name="playButton">
-         <property name="text">
-          <string>&gt;</string>
-         </property>
-        </widget>
-       </item>
        <item>
         <widget class="QProgressBar" name="durationBar">
          <property name="value">
